--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ GitPython==3.1.24
 google-auth==2.3.3
 google-auth-oauthlib==0.4.6
 grpcio==1.42.0
-gym
+gym==0.16.0
 idna==3.3
 imageio==2.13.1
 importlib-metadata==4.8.2
